Fix Header z-index

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,7 +1,9 @@
 header {
   margin: auto;
   max-width: 1136px;
+  position: relative;
   width: 100%;
+  z-index: 1;
 
   .header,
   .info-box {
